--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="https://github.com/Samuelloading13" class="github-button" target="_blank">Visit My GitHub</a>
                 </div>
                 <div class="image-container">
-                    <img src="assets/profile-picture.JPG" alt="Your Profile Picture"> 
+                    <img src="assets/profile-picture.png" alt="Your Profile Picture"> 
                 </div>
             </div>
         </section>
