--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="https://github.com/Samuelloading13" class="github-button" target="_blank">Visit My GitHub</a>
                 </div>
                 <div class="image-container">
-                    <img src="assets/profile-picture.png" alt="Your Profile Picture"> 
+                    <img src="assets/profile-picture.png" alt="Foto Profil Samuel Gurning"> 
                 </div>
             </div>
         </section>
@@ -52,22 +52,59 @@
         <section id="projects">
             <div class="container">
                 <h2>My Projects</h2>
+                <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem auto;">
+                    Below are some of the academic projects I've worked on. Each project showcases my ability to solve problems using different technologies.
+                </p>
                 <div class="project-grid">
-                    <div class="project-card">
-                        <h3>Project One</h3>
-                        <p>A brief description of your first amazing project.</p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Two</h3>
-                        <p>A brief description of your second amazing project.</p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Three</h3>
-                        <p>A brief description of your third amazing project.</p>
-                        <a href="#">View Project</a>
-                    </div>
+
+                    <a href="https://github.com/Samuelloading13/Simple-E-Commerce" target="_blank" class="project-card-link">
+                        <div class="project-card">
+                            <img src="assets/project-ecommerce.jpg" alt="Simple E-Commerce Project">
+                            <div class="project-overlay">
+                                <div class="project-info">
+                                    <h3>Simple E-Commerce CLI</h3>
+                                    <p>A Python-based command-line e-commerce system for purchasing items, demonstrating core algorithm and programming logic.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://github.com/Samuelloading13/KOST-BU-IPUNG" target="_blank" class="project-card-link">
+                        <div class="project-card">
+                            <img src="assets/project-kost.jpg" alt="KOST BU IPUNG Project">
+                            <div class="project-overlay">
+                                <div class="project-info">
+                                    <h3>Boarding House Management System</h3>
+                                    <p>A database management application for a boarding house using Python and PostgreSQL, featuring CRUD functionalities.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://github.com/Samuelloading13/TASKGUARD" target="_blank" class="project-card-link">
+                        <div class="project-card">
+                            <img src="assets/project-taskguard.jpg" alt="TASKGUARD Project">
+                            <div class="project-overlay">
+                                <div class="project-info">
+                                    <h3>TaskGuard To-Do List App</h3>
+                                    <p>An intermediate Python console application for task management, applying advanced programming concepts.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://github.com/NIVRA02/PBOAKHIR1" target="_blank" class="project-card-link">
+                        <div class="project-card">
+                            <img src="assets/project-pbo.jpg" alt="PBO Project">
+                            <div class="project-overlay">
+                                <div class="project-info">
+                                    <h3>Desktop Cashier Application</h3>
+                                    <p>A cashier system for a food stall built with C# and Windows Forms, implementing object-oriented programming principles.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
                 </div>
             </div>
         </section>
@@ -83,10 +120,10 @@
                 </div>
             </div>
         </section>
-        </main>
+    </main>
 
     <footer>
-        <p>&copy; 2025 Samuel Gurning. All rights reserved.</p>
+        <p>&copy; 2024 Samuel Gurning. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script> 
