--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel Gurning | Portfolio</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,8 +15,9 @@
             <ul>
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li> 
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -26,11 +27,11 @@
             <div class="hero-content">
                 <div class="text-container">
                     <h1>Hi, I'm Samuel Gurning</h1>
-                    <p>I'm a <span class="typing-text"></span></p>
+                    <p>I'm <span class="typing-text"></span></p>
                     <a href="https://github.com/Samuelloading13" class="github-button" target="_blank">Visit My GitHub</a>
                 </div>
                 <div class="image-container">
-                    <img src="assets/profile-picture.png" alt="Foto Profil Samuel Gurning"> 
+                    <img src="assets/profile-picture.png" alt="Profile Picture of Samuel Gurning">
                 </div>
             </div>
         </section>
@@ -39,13 +40,24 @@
             <div class="container">
                 <h2>About Me</h2>
                 <p>
-                    I'm an Informatics student with a strong interest in artificial intelligence and software development.
-                    Currently, I'm actively involved as a Public Relations staff member in the Informatics Student Association (HMIF) 
-                    at the University of Jember, which has become a place for me to grow, collaborate, and develop both personally 
-                    and professionally. I enjoy learning new things, exploring emerging technologies, and continuously challenging 
-                    myself through real-world projects and experiences. My goal is to use my skills and passion to create innovative 
-                    solutions that can have a meaningful impact.
+                    Hello! I'm Samuel, an Informatics student with a strong passion for artificial intelligence and software development. My role as a Public Relations staff member at the Informatics Student Association (HMIF) at the University of Jember has been a 'home' for me to grow, collaborate, and develop both personally and professionally.
+                    <br><br>
+                    I genuinely enjoy learning new things, exploring emerging technologies, and challenging myself through real-world projects. My goal is simple: to use my skills and passion to create innovative solutions that make a positive impact. Let's connect and build something amazing together!
                 </p>
+            </div>
+        </section>
+
+        <section id="skills">
+            <div class="container">
+                <h2>Technologies I Use</h2>
+                <div class="skills-grid">
+                    <div class="skill-card">Python</div>
+                    <div class="skill-card">C#</div>
+                    <div class="skill-card">HTML5</div>
+                    <div class="skill-card">CSS3</div>
+                    <div class="skill-card">JavaScript</div>
+                    <div class="skill-card">PostgreSQL</div>
+                </div>
             </div>
         </section>
 
@@ -63,7 +75,7 @@
                             <div class="project-overlay">
                                 <div class="project-info">
                                     <h3>Simple E-Commerce CLI</h3>
-                                    <p>A Python-based command-line e-commerce system for purchasing items, demonstrating core algorithm and programming logic.</p>
+                                    <p>A Python-based command-line e-commerce system for purchasing items. **Built with: Python.**</p>
                                 </div>
                             </div>
                         </div>
@@ -71,11 +83,11 @@
 
                     <a href="https://github.com/Samuelloading13/KOST-BU-IPUNG" target="_blank" class="project-card-link">
                         <div class="project-card">
-                            <img src="assets/project-kost.jpg" alt="KOST BU IPUNG Project">
+                            <img src="assets/project-kost.jpg" alt="Boarding House Project">
                             <div class="project-overlay">
                                 <div class="project-info">
                                     <h3>Boarding House Management System</h3>
-                                    <p>A database management application for a boarding house using Python and PostgreSQL, featuring CRUD functionalities.</p>
+                                    <p>A database management application for a boarding house featuring CRUD functionalities. **Built with: Python & PostgreSQL.**</p>
                                 </div>
                             </div>
                         </div>
@@ -83,11 +95,11 @@
 
                     <a href="https://github.com/Samuelloading13/TASKGUARD" target="_blank" class="project-card-link">
                         <div class="project-card">
-                            <img src="assets/project-taskguard.jpg" alt="TASKGUARD Project">
+                            <img src="assets/project-taskguard.jpg" alt="TaskGuard Project">
                             <div class="project-overlay">
                                 <div class="project-info">
                                     <h3>TaskGuard To-Do List App</h3>
-                                    <p>An intermediate Python console application for task management, applying advanced programming concepts.</p>
+                                    <p>An intermediate console application for task management using advanced programming concepts. **Built with: Python.**</p>
                                 </div>
                             </div>
                         </div>
@@ -95,16 +107,15 @@
 
                     <a href="https://github.com/NIVRA02/PBOAKHIR1" target="_blank" class="project-card-link">
                         <div class="project-card">
-                            <img src="assets/project-pbo.jpg" alt="PBO Project">
+                            <img src="assets/project-pbo.jpg" alt="Cashier App Project">
                             <div class="project-overlay">
                                 <div class="project-info">
                                     <h3>Desktop Cashier Application</h3>
-                                    <p>A cashier system for a food stall built with C# and Windows Forms, implementing object-oriented programming principles.</p>
+                                    <p>A cashier system for a food stall, implementing object-oriented programming principles. **Built with: C# & WinForms.**</p>
                                 </div>
                             </div>
                         </div>
                     </a>
-
                 </div>
             </div>
         </section>
@@ -126,6 +137,6 @@
         <p>&copy; 2024 Samuel Gurning. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script> 
+    <script src="script.js"></script>
 </body>
 </html>
